tests/fsharp/typecheck/sigs/neg06_a.bsl

neg06_a.fs(8,23,8,26): typecheck error FS0023: The member 'IsC' can not be defined because the name 'IsC' clashes with the default augmentation of the union case 'C' in this type or module

neg06_a.fs(13,28,13,31): typecheck error FS0023: The member 'IsD' can not be defined because the name 'IsD' clashes with the default augmentation of the union case 'D' in this type or module
